# CMake_4_Learning

Help/guide/tutorial/Step1/: CMakeLists.txt
Help/guide/tutorial/Step1/MathFunctions/: CMakeLists.txt
Help/guide/tutorial/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
Help/guide/tutorial/Step2/: Exercise1.cmake  Exercise2.cmake  myscript.cmake
Help/guide/tutorial/Step3/: CMakeLists.txt  CMakePresets.json  CMakePresets.notes.md
Help/guide/tutorial/Step3/MathFunctions/: MathFunctions.cxx
Help/guide/tutorial/Step3/SandBox/: CMakeLists.txt  StickyCacheVariable.cmake
Help/guide/tutorial/Step3/Tutorial/: Tutorial.cxx
